style.css
@media only screen and (min-width: 900px) {
  body {
    background-image: url("./images/Backgr.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-color: black;
  }
}
@media only screen and (max-width: 900px) {
  body {
    background-image: url("./images/Backgr.jpg");
    background-size: fill;
    background-repeat: no-repeat;
  }
}
.contain {
  display: flex;
  flex-direction: row;
}
.content {
  width: 1000px;
  color: white;
  font-size: 280%;
  margin-top: 12%;
  margin-left: 6%;
  margin-right: 2%;
  font-family: Calibri;
  min-width: 300px;
}
.content h1 {
  margin: 0%;
  color: aqua;
}
.content h2 {
  margin: 0%;
  color: aqua;
  font-size: 185%;
}
.content h5 {
  margin: 0%;
}
.content h5 > div {
  margin: 0%;
  font-size: 60%;
}
.content p {
  margin-top: 2%;
  margin-bottom: 2%;
}
.content img {
  float: right;
  border-radius: 40%;
}
.content > div img {
  border-radius: 0%;
}
.mail {
  color: aqua;
  font-size: 75%;
  transform: scaleX(0.9) scaleY(0.9);
}
.mail a:hover {
  transition-duration: 0.2s;
  transform: scaleX(0.9) scaleY(0.9);
}
@media only screen and (min-width: 1100px) {  
  .menu {
    background: rgba(85, 85, 85, 0.7);
    width: 260px;
    min-width: 200px;
    height: 380px;
    margin: 2%;
    border-radius: 40px;
  }
  .menu > div {
    text-align: center;
    font-size: 200%;
    border-top: 2px solid silver;
    border-bottom: 2px solid silver;
    position: relative;
    top: 9%;
  }
  .menu > div:hover {
    background-color: grey;
  }
  .menu h4 {
    margin: 4%;
  }
  .menu h4:hover {
    transition-duration: 0.3s;
    transform: scaleX(1.1) scaleY(1.1);
  }
  .menu a {
    text-decoration: none;
    color: white;
  }
  .menu a:hover {
    text-decoration-line: underline;
    color: aqua;
  }
  .links {
    width: 380px;
    min-width: 140px;
    height: 140px;
    vertical-align: top;
    border-bottom: 5px solid silver;
    display: flex;
    flex-direction: row;
  }
  .links > div {
    margin: auto;
  }
  .links > div img {
    border-radius: 60px;
  }
  .links > div img:hover {
    background-color: aqua;
    transition-duration: 0.4s;
    transform: scaleX(0.85) scaleY(0.85);
  }
}
@media only screen and (max-width: 1100px) {  
  .menu {
    display: none;
  }
  .links {
    display: none;
  }
}
.btn {
  border: 2px solid aqua;
  color: aqua;
  background-color: rgba(0, 30, 0, 0.7);
  padding: 15px 45px;
  font-size: 75%;
  cursor: pointer;
  display: inline-block;
  transition-duration: 0.5s;
  border-radius: 20px;
}
.btn:hover {
  background-color: aqua;
  color: black;
  transform: scaleX(0.9) scaleY(0.9);
}
.port {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
.port img:hover {
  border-radius: 50%;
}
ul h3 {
  color: aqua;
}
li {
  font-size: 80%;
}
p a {
  color: aqua;
}
p a:hover {
  filter: brightness(50%);
  transition-duration: 0.3s;
}
@media only screen and (min-width: 1100px) {
  nav {
    display: none;
  }
@media only screen and (max-width: 1100px) {
  nav input {
    display: none;
  }
  nav {
    overflow: hidden;
  }
  nav ul {
    overflow: hidden;
    width: 0;
    height: 0;
    padding: 0;
    margin: 0;
    list-style: none;
  }
  nav input:checked ~ ul {
    width: 100%;
    height: 100%;
  }
  a.button {
    background-color: silver;
    height: fit-content;
    width: fit-content;
    font-size: 200%;
    padding: 0.5em;
    text-align: center;
  }
  a.button:hover {
    background-color: gold;
  }
  .link-tree {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    margin-left: 10em;
   
  }  
}

